# IAnne

./: README.md
AICodeStudio/: bot.py  language_detector.py  personality.py  pyproject.toml  replit.md  response_variations.py  tts_manager.py
AICodeStudio/attached_assets/: Pasted--discord-client-event-async-def-on-message-message-Ignora-mensagens-do-pr-prio-bot-if-1754675451536_1754675451536.txt  ai_studio_code_1754663984144.py
src/: bot.py
